--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18359,6 +18359,24 @@ Reach:
   device: 'smartphone'
   model: '$1'
 
+# MobiWire
+MobiWire:
+  regex: '(?:Kiona|KANUNA|Kicka_4_Plus|Kohana|Kosumi|KWANITA|Lonan)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'KANUNA'
+      model: 'Kanuna'
+    - regex: 'KWANITA'
+      model: 'Kwanita'
+    - regex: '(Kiona|Kicka_4_Plus|Kohana|Kosumi|Lonan)(?:[);/ ]|$)'
+      model: '$1'
+
+# ELARI (elari.net)
+ELARI:
+  regex: 'KidPhone4G(?:[);/ ]|$)'
+  device: 'wearable'
+  model: 'KidPhone 4G'
+
 # Hardkernel (www.hardkernel.com)
 Hardkernel:
   regex: 'ODROID[-]?(C2|U2|XU[34])(?:[);/ ]|$)'
