fix: change method check null to assertNull in AliasDeviceTest & formatting of fixture alias_devices.yml

--- a/Tests/Parser/fixtures/alias_devices.yml
+++ b/Tests/Parser/fixtures/alias_devices.yml
@@ -1,99 +1,80 @@
 ---
--
-  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; zh-cn; PBCT10 Build/OPM1.171019.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.132 MQQBrowser/8.9 Mobile
+- user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; zh-cn; PBCT10 Build/OPM1.171019.011) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.132 MQQBrowser/8.9 Mobile
   alias:
     name: PBCT10
--
-  user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-G532G Build/MMB29T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Mobile Safari/537.36
+
+- user_agent: Mozilla/5.0 (Linux; Android 6.0.1; SM-G532G Build/MMB29T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/64.0.3282.137 Mobile Safari/537.36
   alias:
     name: SM-G532G
 
--
-  user_agent: Mozilla/5.0 (Linux; Android 9; K3_Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.162 Mobile Safari/537.36
+- user_agent: Mozilla/5.0 (Linux; Android 9; K3_Pro) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/80.0.3987.162 Mobile Safari/537.36
   alias:
     name: K3_Pro
 
--
-  user_agent: Mozilla/5.0 (Linux; Android 9; K7(X210ds)) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+- user_agent: Mozilla/5.0 (Linux; Android 9; K7(X210ds)) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
   alias:
     name: K7(X210ds)
 
--
-  user_agent: Mozilla/5.0 (Linux; Android 9; K7(X210ds) Build/MMB29T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
+- user_agent: Mozilla/5.0 (Linux; Android 9; K7(X210ds) Build/MMB29T) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.93 Mobile Safari/537.36
   alias:
     name: K7(X210ds)
 
--
- user_agent: Mozilla/5.0 (Linux; Android 9; L270 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.136 Safari/537.36 YandexSearch/7.90/apad YandexSearchBrowser/7.90
- alias:
-   name: L270
+- user_agent: Mozilla/5.0 (Linux; Android 9; L270 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/74.0.3729.136 Safari/537.36 YandexSearch/7.90/apad YandexSearchBrowser/7.90
+  alias:
+    name: L270
 
--
- user_agent: Mozilla/5.0 (Linux; U; Android 7.1.2; uz-Latn-UZ; U5 Build/N2G47H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.10.0.1163 UCTurbo/1.9.3.900 Mobile Safari/537.36
- alias:
-   name: U5
+- user_agent: Mozilla/5.0 (Linux; U; Android 7.1.2; uz-Latn-UZ; U5 Build/N2G47H) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/57.0.2987.108 UCBrowser/12.10.0.1163 UCTurbo/1.9.3.900 Mobile Safari/537.36
+  alias:
+    name: U5
 
--
- user_agent: Mozilla/5.0 (Android 7.0; samsung SM-A710F) AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 SurfBrowser/3.0
- alias:
-   name: SM-A710F
+- user_agent: Mozilla/5.0 (Android 7.0; samsung SM-A710F) AppleWebKit/537.36 KHTML, like Gecko Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36 SurfBrowser/3.0
+  alias:
+    name: SM-A710F
 
--
-  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 6.0.1; ru; Redmi_4X) U2/1.0.0 UCBrowser/11.1.2.1113 U2/1.0.0 Mobile
+- user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 6.0.1; ru; Redmi_4X) U2/1.0.0 UCBrowser/11.1.2.1113 U2/1.0.0 Mobile
   alias:
     name: Redmi_4X
 
--
-  user_agent: UCWEB/2.0 (Linux; U; Adr 4.1.1; en-US; C1605) U2/1.0.0 UCBrowser/8.6.0.276 U2/1.0.0 Mobile
+- user_agent: UCWEB/2.0 (Linux; U; Adr 4.1.1; en-US; C1605) U2/1.0.0 UCBrowser/8.6.0.276 U2/1.0.0 Mobile
   alias:
     name: C1605
 
--
-  user_agent: Mozilla/5.0 (Linux; Android 4.4.2; 402LG Build/KOT49I.402LG10f) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36
+- user_agent: Mozilla/5.0 (Linux; Android 4.4.2; 402LG Build/KOT49I.402LG10f) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/30.0.0.0 Mobile Safari/537.36
   alias:
     name: 402LG
 
--
-  user_agent: Opera/9.80 (Android 10; Linux; Opera Mobi/ADR-1502251211) Presto/2.11.355 Version/12.10
+- user_agent: Opera/9.80 (Android 10; Linux; Opera Mobi/ADR-1502251211) Presto/2.11.355 Version/12.10
   alias:
     name: ''
 
--
-  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; BIHEE A7+ Build/KTU84P)
+- user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.4; BIHEE A7+ Build/KTU84P)
   alias:
     name: A7+
 
--
-  user_agent: Mozilla/5.0 (Linux; Android 10; SHV45-u) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
+- user_agent: Mozilla/5.0 (Linux; Android 10; SHV45-u) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.106 Mobile Safari/537.36
   alias:
     name: SHV45-u
 
--
-  user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; id; CPH1819 Build/O11019) AppleWebKit/528.5+ (KHTML, like Gecko) Version/3.1.2 Mobile Safari/525.20.1 UCBrowser/10.4.2.659 Mobile
+- user_agent: Mozilla/5.0 (Linux; U; Android 8.1.0; id; CPH1819 Build/O11019) AppleWebKit/528.5+ (KHTML, like Gecko) Version/3.1.2 Mobile Safari/525.20.1 UCBrowser/10.4.2.659 Mobile
   alias:
     name: CPH1819
 
--
-  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.1.1; MI 2S MIUI/JLB16.0)
+- user_agent: Dalvik/1.6.0 (Linux; U; Android 4.1.1; MI 2S MIUI/JLB16.0)
   alias:
     name: MI 2S
 
--
-  user_agent: MQQBrowser/3.6/Adr (Linux; U; 4.2.1; zh-cn; HUAWEI G610-U00 Build/G610-U00 V100R001CHNC17B914;540*960)
+- user_agent: MQQBrowser/3.6/Adr (Linux; U; 4.2.1; zh-cn; HUAWEI G610-U00 Build/G610-U00 V100R001CHNC17B914;540*960)
   alias:
     name: G610-U00
 
--
-  user_agent: JUC(Linux;U;4.4.2;Ru_ru;LG-P715;480*800;)UCWEB7.4.0.65/139/400
+- user_agent: JUC(Linux;U;4.4.2;Ru_ru;LG-P715;480*800;)UCWEB7.4.0.65/139/400
   alias:
     name: LG-P715
 
--
-  user_agent: JUC (Linux; U; 4.0.3; zh-cn; NOVO7_Tornados; 800*444) UCWEB1.0.1.113/147/800
+- user_agent: JUC (Linux; U; 4.0.3; zh-cn; NOVO7_Tornados; 800*444) UCWEB1.0.1.113/147/800
   alias:
     name: NOVO7_Tornados
 
--
-  user_agent: JUC (Linux; U; 4.0.1; zh-cn; HTC_HD7_T9399+; 480*800) UCWEB7.9.3.103/139/800
+- user_agent: JUC (Linux; U; 4.0.1; zh-cn; HTC_HD7_T9399+; 480*800) UCWEB7.9.3.103/139/800
   alias:
     name: HD7_T9399+
