--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6440,7 +6440,7 @@
     model: Z10
   os_family: Android
   browser_family: Chrome
--
+- 
   user_agent: TV Bro/1.0 Mozilla/5.0 (Linux; Android 9; VONTAR X3 Build/PPR1.180610.011; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/81.0.4044.111 Safari/537.36
   os:
     name: Android
@@ -6457,4 +6457,58 @@
     brand: Vontar
     model: X3
   os_family: Android
+  browser_family: Chrome
+- 
+  user_agent: HbbTV/1.4.1 (+DRM;Samsung;SmartTV2019:URU8000;T-MSMDEUC-0616.10;MuseM;urn:samsungtv:familyname:19_MUSEM_UHD:2019;) Tizen/5.0 (+SmartHubLink) Chrome/63 LaTivu_1.0.1_2019 VID/9
+  os:
+    name: Tizen
+    version: "5.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: "63"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Samsung
+    model: URU8000
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: HbbTV/1.4.1 (+DRM;Samsung;SmartTV2020:UTU7000;T-KTSU2DEUC-0822.10;KantSU2;urn:samsungtv:familyname:KANTSU2:2020;) Tizen/5.5 (+SmartHubLink) Chromium/69 LaTivu_1.0.1_2019 VID/11
+  os:
+    name: Tizen
+    version: "5.5"
+    platform: ""
+  client:
+    type: browser
+    name: Chromium
+    version: "69"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Samsung
+    model: UTU7000
+  os_family: Other Mobile
+  browser_family: Chrome
+- 
+  user_agent: HbbTV/1.5.1 (+DRM;Samsung;SmartTV2021:UAU7000;T-KSU2EDEUC-0124.20;KantSU2e;urn:samsungtv:familyname:21_KANTSU2E_UHD_BASIC:2021;) Tizen/6.0 (+SmartHubLink) Chrome/76 LaTivu_1.0.1_2021 RVID/12
+  os:
+    name: Tizen
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: "76"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Samsung
+    model: UAU7000
+  os_family: Other Mobile
   browser_family: Chrome
