Improves macOS and iOS detection and version detection

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,21 +303,29 @@
 ##########
 # iOS
 ##########
-- regex: 'CFNetwork/889'
+- regex: 'CFNetwork/978(?!.*x86_64)'
+  name: 'iOS'
+  version: '12.2'
+
+- regex: 'CFNetwork/97[56](?!.*x86_64)'
+  name: 'iOS'
+  version: '12.1'
+
+- regex: 'CFNetwork/974(?!.*x86_64)'
+  name: 'iOS'
+  version: '12.0'
+
+- regex: 'CFNetwork/902(?!.*x86_64)'
+  name: 'iOS'
+  version: '11.4'
+
+- regex: 'CFNetwork/889(?!.*x86_64)'
   name: 'iOS'
   version: '11.1'
 
-- regex: 'CFNetwork/887.*(x86_64)'
-  name: 'Mac'
-  version: '10.13'
-
-- regex: 'CFNetwork/887'
+- regex: 'CFNetwork/887(?!.*x86_64)'
   name: 'iOS'
   version: '11.0'
-
-- regex: 'CFNetwork/811.*(x86_64)'
-  name: 'Mac'
-  version: '10.12'
 
 - regex: 'CFNetwork/811'
   name: 'iOS'
@@ -447,7 +455,7 @@
   name: 'iOS'
   version: '$1'
 
-- regex: 'Podcasts/(?:[\d\.]+)|Instacast(?:HD)?/(?:\d\.[\d\.abc]+)|Pocket Casts, iOS|Overcast|Castro|Podcat|i[cC]atcher|RSSRadio/'
+- regex: '(?:Podcasts/(?:[\d\.]+)|Instacast(?:HD)?/(?:\d\.[\d\.abc]+)|Pocket Casts, iOS|Overcast|Castro|Podcat|i[cC]atcher|RSSRadio/)(?!.*x86_64)'
   name: 'iOS'
   version: ''
 
@@ -459,6 +467,22 @@
 ##########
 # Mac
 ##########
+
+- regex: 'CFNetwork/(?:108[258]|109[18]|1103).*(x86_64)'
+  name: 'Mac'
+  version: '10.15'
+
+- regex: 'CFNetwork/(?:96[29]|97[14568]).*(x86_64)'
+  name: 'Mac'
+  version: '10.14'
+
+- regex: 'CFNetwork/(?:887|889|893|897|901|902).*(x86_64)'
+  name: 'Mac'
+  version: '10.13'
+
+- regex: 'CFNetwork/811.*(x86_64)'
+  name: 'Mac'
+  version: '10.12'
 
 - regex: 'CFNetwork/807'
   name: 'Mac'
