--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -216,7 +216,6 @@
     short_name: MAE
     version:
     platform: ARM
-  client:
 -
   user_agent: Mozilla/5.0 (X11; U; Linux i686; es-ES; rv:2.0) Gecko/20100101 Linux Mint 16/Petra Firefox/25.0.1.
   os:
@@ -959,7 +958,6 @@
     short_name: IOS
     version:
     platform:
-
 -
   user_agent: Mozilla/5.0 (Linux; U; en-us; BeyondPod)
   os:
@@ -967,7 +965,6 @@
     short_name: AND
     version:
     platform:
-
 -
   user_agent: AntennaPod/0.9.9.1
   os:
@@ -975,7 +972,6 @@
     short_name: AND
     version: 
     platform:
-
 -
   user_agent: Overcast/1.0 (+http://overcast.fm/; iOS podcast app)
   os:
@@ -983,7 +979,6 @@
     short_name: IOS
     version: 
     platform:
-
 -
   user_agent: Podkicker Pro/1.9.4
   os:
@@ -991,7 +986,6 @@
     short_name: AND
     version:
     platform:
-
 -
   user_agent: Castro/64 CFNetwork/672.1.15 Darwin/14.0.0
   os:
@@ -999,7 +993,6 @@
     short_name: IOS
     version: "7.1"
     platform:
-
 -
   user_agent: Mozilla/5.0 (Linux; U; Windows NT 6.1; en-us; dream) DoggCatcher
   os:
@@ -1007,7 +1000,6 @@
     short_name: AND
     version: 
     platform:
-
 -
   user_agent: iTunes-iPod/6.1.6 (4; 16GB; dt:71)
   os:
@@ -1015,7 +1007,6 @@
     short_name: IOS
     version:
     platform:
-
 -
   user_agent: TwitterAndroid/7.73.0-release.17 (8900198-r-17) HUAWEI VNS-L53/7.0 (HUAWEI;HUAWEI VNS-L53;HUAWEI;VNS-L53;0;;1;2013)
   os:
@@ -1023,7 +1014,6 @@
     short_name: AND
     version: "7.0"
     platform:
-
 -
   user_agent: TwitterAndroid/7.71.1-release.15 (8900196-r-15) TA-1028/8.0.0 (HMD Global;TA-1028;Nokia;TA-1028_00WW;0;;1;2013)
   os:
@@ -1108,3 +1098,184 @@
     short_name: DEE
     version: "15.11"
     platform: x64
+-
+  user_agent: Safari/11603.1.30.0.34 CFNetwork/760.6.3 Darwin/15.6.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.11"
+    platform: x64
+-
+  user_agent: Safari/13605.1.33.1.4 CFNetwork/897.15 Darwin/17.5.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.13"
+    platform: x64
+-
+  user_agent: Safari/13606.3.4.1.4 CFNetwork/902.1 Darwin/17.7.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.13"
+    platform: x64
+-
+  user_agent: Safari/13604.5.6 CFNetwork/893.13.1 Darwin/17.4.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.13"
+    platform: x64
+-
+  user_agent: Safari/13604.3.5 CFNetwork/889.9 Darwin/17.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.13"
+    platform: x64
+-
+  user_agent: Safari/13604.1.38.1.6 CFNetwork/887 Darwin/17.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.13"
+    platform: x64
+-
+  user_agent: Safari/13605.2.8 CFNetwork/901.1 Darwin/17.6.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.13"
+    platform: x64
+-
+  user_agent: Safari/14607.3.9 CFNetwork/978.0.7 Darwin/18.7.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Safari/14606.4.5 CFNetwork/976 Darwin/18.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Safari/14606.2.104.1.1 CFNetwork/975.0.3 Darwin/18.2.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Safari/14606.1.36.1.9 CFNetwork/974.1 Darwin/18.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Safari/14606.1.32 CFNetwork/971 Darwin/18.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Safari/14606.1.24.40.1 CFNetwork/962 Darwin/18.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Safari/14606.1.30 CFNetwork/969 Darwin/18.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.14"
+    platform: x64
+-
+  user_agent: Podcasts/1400.190 CFNetwork/1088.1 Darwin/19.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.15"
+    platform: x64
+-
+  user_agent: Podcasts/1400.203 CFNetwork/1091 Darwin/19.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.15"
+    platform: x64
+-
+  user_agent: Podcasts/1400.219.5 CFNetwork/1098 Darwin/19.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.15"
+    platform: x64
+-
+  user_agent: Podcasts/1410.10 CFNetwork/1103 Darwin/19.0.0 (x86_64)
+  os:
+    name: Mac
+    version: "10.15"
+    platform: x64
+-
+  user_agent: Podcasts/1410.10 CFNetwork/1085.4 Darwin/19.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.15"
+    platform: x64
+-
+  user_agent: Podcasts/1410.10 CFNetwork/1082.3.1 Darwin/19.0.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: "10.15"
+    platform: x64
+-
+  user_agent: MobileSafari/604.1 CFNetwork/978.0.7 Darwin/18.5.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "12.2"
+    platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/976 Darwin/18.2.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "12.1"
+    platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/975.0.3 Darwin/18.2.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "12.1"
+    platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/974.2.1 Darwin/18.0.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "12.0"
+    platform: ""
+-
+  user_agent: MobileSafari/602.1 CFNetwork/811.5.4 Darwin/16.7.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "10.3"
+    platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/902.2 Darwin/17.7.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "11.4"
+    platform: ""
