--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1221,6 +1221,7 @@
   user_agent: Podcasts/1410.10 CFNetwork/1103 Darwin/19.0.0 (x86_64)
   os:
     name: Mac
+    short_name: MAC
     version: "10.15"
     platform: x64
 -
