--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -327,7 +327,7 @@
   name: 'iOS'
   version: '11.0'
 
-- regex: 'CFNetwork/811'
+- regex: 'CFNetwork/811(?!.*x86_64)'
   name: 'iOS'
   version: '10.3'
 
