feat(device) detect brand ONN models: 100005207, 100005208, 100005209, 100005206 feat(device) detect brand Sony model: Xperia Z2 Tablet (SGP561) feat(device) detect new brand 4ife model: 4K Smart TV Box feat(device) detect brand RCA Tablets models: Atlas 10.0" (RCT6703W12),  Endeavor 10.0" HD (RCT6A06P22), Viking Pro 10.0" (RCT6303W87DK), Voyager II 7.0" (RCT6773W22B),  Pro 10 Edition II (RCT6203W46L), Voyager III 7.0" (RCT6973W43), Voyager 7.0" (RCT6873W42M)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4813,6 +4813,9 @@ Sony:
     - regex: 'Xperia Z2 Tablet Wifi'
       model: 'Xperia Z2 Tablet WiFi'
       device: 'tablet'
+    - regex: 'SGP561'
+      model: 'Xperia Z2 Tablet'
+      device: 'tablet'
     - regex: '(?:Sony(?:Ericsson)?)?(?:D65(?:0[23]|43)|SO-03F)|Xperia Z2(?:[);/ ]|$)'
       model: 'Xperia Z2'
     - regex: 'D6563'
@@ -8631,6 +8634,9 @@ LG:
     - regex: 'VS870 4G'
       model: 'Lucid 2'
 
+    - regex: 'LGUK410'
+      model: 'G Pad 7.0" LTE'
+      device: 'tablet'
     - regex: 'LG-V490'
       model: 'G Pad 8.0'
       device: 'tablet'
@@ -11222,7 +11228,7 @@ ProScan:
 
 # RCA Tablets (RCA)
 'RCA Tablets':
-  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6513W87|RCT6973W43MD'
+  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT6A06P22|RCT6303W87DK|RCT6773W22B|RCT6203W46L|RCT6873W42M'
   device: 'smartphone'
   models:
     - regex: 'RCA RLTP4028'
@@ -11230,9 +11236,27 @@ ProScan:
     - regex: 'RCT6513W87'
       device: 'tablet'
       model: 'Galileo Pro 11.5"'
-    - regex: 'RCT6973W43MD'
+    - regex: 'RCT6873W42M'
+      device: 'tablet'
+      model: 'Voyager 7.0"'
+    - regex: 'RCT6973W43(?:MD)?'
       device: 'tablet'
       model: 'Voyager III 7.0"'
+    - regex: 'RCT6773W22B'
+      device: 'tablet'
+      model: 'Voyager II 7.0"'
+    - regex: 'RCT6703W12'
+      device: 'tablet'
+      model: 'Atlas 10.0"'
+    - regex: 'RCT6203W46L'
+      device: 'tablet'
+      model: 'Pro 10 Edition II'
+    - regex: 'RCT6A06P22'
+      device: 'tablet'
+      model: 'Endeavor 10.0" HD'
+    - regex: 'RCT6303W87DK'
+      device: 'tablet'
+      model: 'Viking Pro 10.0"'
     - regex: 'RCT([^;/]+) Build'
       device: 'tablet'
       model: 'RCT$1'
@@ -17085,7 +17109,7 @@ NEXON:
 
 # ONN
 ONN:
-  regex: '(ONA19TB00[327])(?:[);/ ]|$)'
+  regex: '(ONA19TB00[327]|10000520[6-9])(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
@@ -18418,3 +18442,9 @@ Shtrikh-M:
   regex: 'SHTRIH-SMARTPOS-F2(?:[);/ ]|$)'
   device: 'peripheral'
   model: 'Smartpos F2'
+
+# 4ife
+4ife:
+  regex: '4ife (4K Smart TV Box)(?:[);/ ]|$)'
+  device: 'tv'
+  model: '$1'
