feat(device) detect brand Lanix models: Ilium Pad E9, Ilium Pad E7, Ilium Pad E10,  Ilium Pad RX7, Ilium Pad RX8, Ilium Pad RX10, Ilium Alpha 1s, Ilium Alpha 5s,  Ilium Alpha 9, Ilium Alpha 7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7919,15 +7919,15 @@ Land Rover:
 
 # lanix
 Lanix:
-  regex: 'LANIX-([a-z0-9]+)|Ilium[ _]|X120C|Alpha 950'
+  regex: 'LANIX-([a-z0-9]+)|Ilium[ _]|IliumPad|X120C|Alpha 950'
   device: 'smartphone'
   models:
-    - regex: 'ILIUM[ _]PAD[ _]([^;/]+) Build'
+    - regex: 'ILIUM[ _]?PAD[ _]?([^;/]+)(?: Build|[;)])'
       model: 'Ilium Pad $1'
       device: 'tablet'
     - regex: 'X120C'
       model: 'Ilium X120C'
-    - regex: 'Ilium[ _](Alpha 3|L(?:200|6[12]0|9[125]0|1[0124]00|1050|1120)|LT5[012]0|M[13579]|S(?:106|520|6[27]0)|X(?:1[12]0|2[0126]0|5[12]0|500B|710))'
+    - regex: 'Ilium[ _](Alpha [15]s|Alpha [379]|L(?:200|6[12]0|9[125]0|1[0124]00|1050|1120)|LT5[012]0|M[13579]|S(?:106|520|6[27]0)|X(?:1[12]0|2[0126]0|5[12]0|500B|710))(?:[);/ ]|$)'
       model: 'Ilium $1'
     - regex: 'ILIUM[ _]([^;/]+) Build'
       model: 'Ilium $1'
