feat(device) detect brand Inoi model: 7 (2020) feat(device) detect brand LG model: G3 (LG-D858HK)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8424,7 +8424,7 @@ LG:
       model: 'G2'
     - regex: 'LG-D6(?:18|20)'
       model: 'G2 Mini'
-    - regex: 'LG-D85[0125]|VS985'
+    - regex: 'LG-D85[01258]|VS985'
       model: 'G3'
     - regex: 'LG-D72[2458]'
       model: 'G3 Beat'
@@ -16369,6 +16369,8 @@ Inoi:
       model: '2 Lite (2019)'
     - regex: 'INOI 2 2019'
       model: '2 (2019)'
+    - regex: 'INOI 7 2020'
+      model: '7 (2020)'
     - regex: 'INOI[_ ]([^;/]+)(?: Build|[;)])'
       model: '$1'
 
