ffeat(device) detect new brand Reeder models: 3G Tablet, A7iC, A8i Quad, A7i Quad, A8i Q2, M8, M8 Plus, M10 Plus, T8, P11SE

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -18483,6 +18483,12 @@ iSWAG:
     - regex: 'iSWAG[_ ]MEGA'
       model: 'Mega'
 
+# Reeder (reeder.com.tr)
+Reeder:
+  regex: 'reeder[_ ](3G_Tablet|A7iC|A[78]i[_ ]Quad|A8i Q2|M8 Plus|[TM]8|M10 Plus|P11SE)(?:[);/ ]|$)'
+  device: 'tablet'
+  model: '$1'
+
 # ELARI (elari.net)
 ELARI:
   regex: 'KidPhone4G(?:[);/ ]|$)'
