ffeat(device) detect brand RCA Tablets models: Viking Pro 10.0" (RCT6303W87M, RCT6K03W13)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11251,7 +11251,7 @@ ProScan:
 
 # RCA Tablets (RCA)
 'RCA Tablets':
-  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT6A06P22|RCT6303W87DK|RCT6773W22B|RCT6203W46L|RCT6873W42M'
+  regex: 'RCT([^;/]+) Build|RCA RLTP4028|RCT6513W87|RCT6973W43(?:MD)?|RCT6703W12|RCT6A06P22|RCT6303W87(?:DK|M)|RCT6773W22B|RCT6203W46L|RCT6873W42M|RCT6K03W13'
   device: 'smartphone'
   models:
     - regex: 'RCA RLTP4028'
@@ -11277,7 +11277,7 @@ ProScan:
     - regex: 'RCT6A06P22'
       device: 'tablet'
       model: 'Endeavor 10.0" HD'
-    - regex: 'RCT6303W87DK'
+    - regex: 'RCT6303W87(?:DK|M)|RCT6K03W13'
       device: 'tablet'
       model: 'Viking Pro 10.0"'
     - regex: 'RCT([^;/]+) Build'
