use memcached extension

--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-version }}
           tools: composer:v2
+          extensions: memcached
       - name: "Composer install"
         run: |
           composer install --ignore-platform-reqs
