feat(device) detect new brand Epik One models: Leo Plus (K501 Plus), Leo (K501), Omega (K502),  Leo Max (K503), Titan 3G (K504), Bolt (K510), Bolt Pro (K511), Hada (K534), Hada Turbo (K535),  Excalibur (K540), Panther (K573), Jupiter (K600), Jupiter One (K601), Titan II (X507T), Pebble Plus (K406)  Leo Turbo (K503T), Pebble II (K405), Palette (T700), Rocket (K545) feat(device) detect brand QMobile models: Jazz X JS7 Pro, Jazz X JS2, Jazz X JS10 feat(device) detect brand Kalley models: K-BOOK8MG, K-BOOK73G

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7434,13 +7434,16 @@ Just5:
     - regex: 'BLASTER'
       model: 'Blaster'
 
-# Kalley
+# Kalley (www.kalley.com.co)
 Kalley:
-  regex: 'ELEMENT Q'
+  regex: '(?:ELEMENT Q|K-BOOK(?:8MG|73G))(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'ELEMENT Q'
       model: 'Element Q'
+    - regex: 'K-BOOK(8MG|73G)'
+      device: 'tablet'
+      model: 'K-BOOK$1'
 
 # Kaan
 Kaan:
@@ -13115,9 +13118,13 @@ Qilive:
 
 # QMobile
 QMobile:
-  regex: 'QMobile|QTab|Q-Smart|Noir X1S|LUNA PRO|NICE S'
+  regex: 'QMobile|QTab|Q-Smart|Noir X1S|LUNA PRO|NICE S|JazzX JS(?:[27]|10)(?: PRO)?'
   device: 'smartphone'
   models:
+    - regex: 'JazzX JS7 PRO'
+      model: 'Jazz X JS7 Pro'
+    - regex: 'JazzX JS(2|10)'
+      model: 'Jazz X JS$1'
     - regex: 'QTab[ _-]([^;/]+) Build'
       model: '$1 Tab'
       device: 'tablet'
@@ -18567,6 +18574,55 @@ ELARI:
   regex: 'KidPhone4G(?:[);/ ]|$)'
   device: 'wearable'
   model: 'KidPhone 4G'
+
+# Epik One or EPIKONE (epikmobile.com)
+'Epik One':
+  regex: '(K501 Plus|[ ]K5(?:0[0-4]|1[01]|03T|3[456]|4[05]|73)|[ ]K60[01]|[ ]X507T|[ ]K40[56]|[ ]T700)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'K501 Plus'
+      model: 'Leo Plus'
+    - regex: 'K501'
+      model: 'Leo'
+    - regex: 'K500'
+      model: 'Omega Lite'
+    - regex: 'K502'
+      model: 'Omega'
+    - regex: 'K503T'
+      model: 'Leo Turbo'
+    - regex: 'K503'
+      model: 'Leo Max'
+    - regex: 'K504'
+      model: 'Titan 3G'
+    - regex: 'X507T'
+      model: 'Titan II'
+    - regex: 'K510'
+      model: 'Bolt'
+    - regex: 'K511'
+      model: 'Bolt Pro'
+    - regex: 'K534'
+      model: 'Hada'
+    - regex: 'K535'
+      model: 'Hada Turbo'
+    - regex: 'K545'
+      model: 'Rocket'
+    - regex: 'K536'
+      model: 'Royal'
+    - regex: 'K540'
+      model: 'Excalibur'
+    - regex: 'K573'
+      model: 'Panther'
+    - regex: 'K600'
+      model: 'Jupiter'
+    - regex: 'K601'
+      model: 'Jupiter One'
+    - regex: 'K406'
+      model: 'Pebble Plus'
+    - regex: 'K405'
+      model: 'Pebble II'
+    - regex: 'T700'
+      model: 'Palette'
+      device: 'tablet'
 
 # Leff
 Leff:
