Improves detection for iOS 11.4

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -315,7 +315,7 @@
   name: 'iOS'
   version: '12.0'
 
-- regex: 'CFNetwork/902(?!.*x86_64)'
+- regex: '(?:CFNetwork/902|Darwin/17.6.0)(?!.*x86_64)'
   name: 'iOS'
   version: '11.4'
 
