Improves detection for iOS 11.4.1

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -315,6 +315,10 @@
   name: 'iOS'
   version: '12.0'
 
+- regex: '(?:CFNetwork/902|Darwin/17.7.0)(?!.*x86_64)'
+  name: 'iOS'
+  version: '11.4.1'
+
 - regex: '(?:CFNetwork/902|Darwin/17.6.0)(?!.*x86_64)'
   name: 'iOS'
   version: '11.4'
