--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1284,5 +1284,13 @@
   user_agent: MobileSafari/604.1 CFNetwork/901.1 Darwin/17.6.0
   os:
     name: iOS
+    short_name: IOS
     version: "11.4"
+    platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/902.2 Darwin/17.7.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: 11.4.1
     platform: ""
