Improves detection for iOS 12.1

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -307,7 +307,7 @@
   name: 'iOS'
   version: '12.2'
 
-- regex: 'CFNetwork/97[56](?!.*x86_64)'
+- regex: '(?:CFNetwork/97[56]|Darwin/18.2.0)(?!.*x86_64)'
   name: 'iOS'
   version: '12.1'
 
