Improves detection for iOS 12.2

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,7 +303,7 @@
 ##########
 # iOS
 ##########
-- regex: 'CFNetwork/978(?!.*x86_64)'
+- regex: '(?:CFNetwork/978|Darwin/18.5.0)(?!.*x86_64)'
   name: 'iOS'
   version: '12.2'
 
