Adds detection for iOS 12.3

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1294,3 +1294,9 @@
     short_name: IOS
     version: 11.4.1
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/978.0.7 Darwin/18.6.0
+  os:
+    name: iOS
+    version: "12.3"
+    platform: ""
