--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,6 +303,10 @@
 ##########
 # iOS
 ##########
+- regex: 'CFNetwork/978.*Darwin/18.6.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '12.3'
+
 - regex: '(?:CFNetwork/978|Darwin/18.5.0)(?!.*x86_64)'
   name: 'iOS'
   version: '12.2'
