Adds detection for iOS 13

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1308,3 +1308,10 @@
     short_name: IOS
     version: "12.4"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1125 Darwin/19.0.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "13"
+    platform: ""
