Adds detection for iOS 13.3

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1315,3 +1315,10 @@
     short_name: IOS
     version: "13"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1121.2.2 Darwin/19.2.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "13.3"
+    platform: ""
