Adds detection for iOS 13.3.1

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1322,3 +1322,10 @@
     short_name: IOS
     version: "13.3"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1121.2.2 Darwin/19.3.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: 13.3.1
+    platform: ""
