Adds detection for iOS 13.4

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1329,3 +1329,10 @@
     short_name: IOS
     version: 13.3.1
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1125.2 Darwin/19.4.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "13.4"
+    platform: ""
