--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,6 +303,10 @@
 ##########
 # iOS
 ##########
+- regex: 'CFNetwork/1125.*Darwin/19.4.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '13.4'
+
 - regex: 'CFNetwork/1121.*Darwin/19.3.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.3.1'
