--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1336,3 +1336,10 @@
     short_name: IOS
     version: "13.4"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1126 Darwin/19.5.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "13.5"
+    platform: ""
