--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7,7 +7,7 @@
 
 # Ace or ACE France (www.acemobile.fr)
 Ace:
-  regex: '(?:BUZZ 1 (?:Lite|Plus)|BUZZ 2[ ]?(?:Lite|Plus?))(?:[);/ ]|$)'
+  regex: '(?:BUZZ [12] (?:Lite|Plus)|BUZZ 2)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: 'BUZZ ([12]) Lite'
