Adds detection for iOS 13.6

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1343,3 +1343,10 @@
     short_name: IOS
     version: "13.5"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1128.0.1 Darwin/19.6.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "13.6"
+    platform: ""
