--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,6 +303,10 @@
 ##########
 # iOS
 ##########
+- regex: 'CFNetwork/1128.*Darwin/19.6.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '13.6'
+
 - regex: 'CFNetwork/1126.*Darwin/19.5.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.5'
