Adds detection for iOS 14

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1350,3 +1350,10 @@
     short_name: IOS
     version: "13.6"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1197 Darwin/20.0.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "14"
+    platform: ""
