Adds detection for iOS 14.2

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1357,3 +1357,10 @@
     short_name: IOS
     version: "14"
     platform: ""
+-
+  user_agent: MobileSafari/604.1 CFNetwork/1206 Darwin/20.1.0
+  os:
+    name: iOS
+    short_name: IOS
+    version: "14.2"
+    platform: ""
