--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,6 +303,10 @@
 ##########
 # iOS
 ##########
+- regex: 'CFNetwork/1206.*Darwin/20.1.0(?!.*x86_64)'
+  name: 'iOS'
+  version: '14.2'
+
 - regex: 'CFNetwork/1197.*Darwin/20.0.0(?!.*x86_64)'
   name: 'iOS'
   version: '14'
