--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -343,23 +343,23 @@
   name: 'iOS'
   version: '12.3'
 
-- regex: '(?:CFNetwork/978|Darwin/18.5.0)(?!.*x86_64)'
+- regex: 'CFNetwork/978.*Darwin/18.5.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.2'
 
-- regex: '(?:CFNetwork/97[56]|Darwin/18.2.0)(?!.*x86_64)'
+- regex: 'CFNetwork/97[56].*Darwin/18.2.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.1'
 
-- regex: '(?:CFNetwork/974|Darwin/18.0.0)(?!.*x86_64)'
+- regex: 'CFNetwork/974.*Darwin/18.0.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.0'
 
-- regex: '(?:CFNetwork/902|Darwin/17.7.0)(?!.*x86_64)'
+- regex: 'CFNetwork/902.*Darwin/17.7.0(?!.*x86_64)'
   name: 'iOS'
   version: '11.4.1'
 
-- regex: '(?:CFNetwork/902|Darwin/17.6.0)(?!.*x86_64)'
+- regex: 'CFNetwork/902.*Darwin/17.6.0(?!.*x86_64)'
   name: 'iOS'
   version: '11.4'
 
