Fix for VK Mobile and VKworld

--- a/Tests/fixtures/feature_phone.yml
+++ b/Tests/fixtures/feature_phone.yml
@@ -844,7 +844,7 @@
   device:
     type: feature phone
     brand: VK Mobile
-    model: vk900
+    model: VK900
   os_family: Unknown
   browser_family: Unknown
 -
