--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -9,6 +9,8 @@
 - regex: 'Chrome/(\d+[\.\d]+).+AgentWeb.+UCBrowser'
   name: 'CoolBrowser'
   version: ''
+  engine:
+    default: 'Blink'
 
 # Seewo Browser (http://e.seewo.com/)
 - regex: 'SeewoBrowser/(?:(\d+[\.\d]+))?'
