--- a/Tests/Parser/Client/fixtures/browser.yml
+++ b/Tests/Parser/Client/fixtures/browser.yml
@@ -2700,7 +2700,7 @@
   client:
     type: browser
     name: CoolBrowser
-    version: 78.0.3904.108
+    version: ""
     engine: Blink
     engine_version: ""
 -
