--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -303,67 +303,67 @@
 ##########
 # iOS
 ##########
-- regex: 'CFNetwork/.*Darwin/20.2.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/20.2.0(?!.*x86_64)'
   name: 'iOS'
   version: '14.3'
 
-- regex: 'CFNetwork/1206.*Darwin/20.1.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/20.1.0(?!.*x86_64)'
   name: 'iOS'
   version: '14.2'
 
-- regex: 'CFNetwork/1197.*Darwin/20.0.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/20.0.0(?!.*x86_64)'
   name: 'iOS'
   version: '14.0'
 
-- regex: 'CFNetwork/1128.*Darwin/19.6.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.6.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.6'
 
-- regex: 'CFNetwork/1126.*Darwin/19.5.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.5.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.5'
 
-- regex: 'CFNetwork/1125.*Darwin/19.4.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.4.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.4'
 
-- regex: 'CFNetwork/1121.*Darwin/19.3.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.3.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.3.1'
 
-- regex: 'CFNetwork/1121.*Darwin/19.2.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.2.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.3'
 
-- regex: 'CFNetwork/1125.*Darwin/19.0.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/19.0.0(?!.*x86_64)'
   name: 'iOS'
   version: '13.0'
 
-- regex: 'CFNetwork/978.*Darwin/18.7.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/18.7.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.4'
 
-- regex: 'CFNetwork/978.*Darwin/18.6.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/18.6.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.3'
 
-- regex: 'CFNetwork/978.*Darwin/18.5.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/18.5.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.2'
 
-- regex: 'CFNetwork/97[56].*Darwin/18.2.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/18.2.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.1'
 
-- regex: 'CFNetwork/974.*Darwin/18.0.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/18.0.0(?!.*x86_64)'
   name: 'iOS'
   version: '12.0'
 
-- regex: 'CFNetwork/902.*Darwin/17.7.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.7.0(?!.*x86_64)'
   name: 'iOS'
   version: '11.4.1'
 
-- regex: 'CFNetwork/90[12].*Darwin/17.6.0(?!.*x86_64)'
+- regex: 'CFNetwork/.+ Darwin/17.6.0(?!.*x86_64)'
   name: 'iOS'
   version: '11.4'
 
