Adds detection for macOS 10.15.2

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -515,6 +515,9 @@
 ##########
 # Mac
 ##########
+- regex: 'CFNetwork/.+ Darwin/19.2.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.15.2'
 
 - regex: 'CFNetwork/(?:108[258]|109[18]|1103).*(x86_64)'
   name: 'Mac'
