Adds detection for macOS 10.15.4

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1385,3 +1385,10 @@
     short_name: MAC
     version: 10.15.3
     platform: x64
+-
+  user_agent: Safari/15609.1.20.111.8 CFNetwork/1125.2 Darwin/19.4.0 (x86_64)
+  os:
+    name: Mac
+    short_name: MAC
+    version: 10.15.4
+    platform: x64
