Adds detection for macOS 10.15.5

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1392,3 +1392,9 @@
     short_name: MAC
     version: 10.15.4
     platform: x64
+-
+  user_agent: com.apple.Safari.SearchHelper/15609.2.9.1.2 CFNetwork/1126 Darwin/19.5.0 (x86_64)
+  os:
+    name: Mac
+    version: 10.15.5
+    platform: x64
