Adds detection for macOS 11.0

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1404,3 +1404,15 @@
     name: Mac
     version: 10.15.6
     platform: x64
+-
+  user_agent: Safari/16610.1.21.1.2 CFNetwork/1195 Darwin/20.0.0 (x86_64)
+  os:
+    name: Mac
+    version: "11.0"
+    platform: x64
+-
+  user_agent: Safari/16610.1.21.1.2 CFNetwork/1195 Darwin/20.1.0 (x86_64)
+  os:
+    name: Mac
+    version: "11.0"
+    platform: x64
