Adds detection for macOS 10.14.1

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -547,6 +547,10 @@
   name: 'Mac'
   version: '10.15'
 
+- regex: 'CFNetwork/.+ Darwin/18.2.0.*(x86_64)'
+  name: 'Mac'
+  version: '10.14.1'
+
 - regex: 'CFNetwork/(?:96[29]|97[14568]).*(x86_64)'
   name: 'Mac'
   version: '10.14'
